--- a/index.css
+++ b/index.css
@@ -1,6 +1,7 @@
 *{
     margin: 0;
     padding: 0;
+    /* overflow-x: auto; */
 }
 
 .service{
@@ -36,7 +37,7 @@
 .draw-container{
     display: flex;
     /* width: 100%; */
-    z-index: -1;
+    /* z-index: -1; */
     /* height: 70vh; */
   
 }
@@ -54,7 +55,7 @@
     height: 5vh;
     margin: 2px;
     padding: 20px;
-    z-index: 0;
+    /* z-index: 0; */
 
 }
 
@@ -62,6 +63,7 @@
     background-color: rgb(212, 209, 209);
     height: 80vh;
     width: 100%;
+    overflow-x: auto;
 
 }
 /* --------------------------Draw area------------------- */
@@ -87,28 +89,28 @@
     height: 40;
     font-size: 30px;
     cursor: move;
-    z-index: 10;
+    z-index: 2;
 }
 
 .rectangle{
     background-color: white;
     border: 2px solid black;
-    width: 5%;
-    height: 5vh;
-    /* margin-left: 10px; */
+    width: 40;
+    height: 40;
+
     padding: 20px;
     font-size: 30px; 
+    z-index: 2;
     cursor: move;
 }
 
 .diamond{
     background-color: white;
     border: 2px solid black;
-    width: 5%;
-    /* margin-left: 16px; */
+    width: 30;
     padding: 17px;
-    height: 5vh;
-    font-size: 20px;
+    height: 20;
+    z-index: 2;
     transform: rotate(45deg);
     cursor: move;
 }
@@ -117,6 +119,8 @@
     background-color: black;
     width: 70%;
     height: 15px;
+    z-index: 2;
+    cursor: move;
 }
 
 .barrier-hollow{
@@ -124,6 +128,8 @@
     border: 2px solid black;
     width: 70%;
     height: 30px;
+    cursor: move;
+    z-index: 2;
 }
 
 .barrier-label{
@@ -131,6 +137,8 @@
     border: 1.5px solid rgb(160, 156, 156);
     width: 60%;
     height: 30px;
+    cursor: move;
+    z-index: 2;
 }
 .barrier-label,span{
     font-size: 0.9rem;
@@ -140,33 +148,77 @@
 }
 
 .hold-circle{
-    border: 2px solid green;
-    /* background-color: white;
-    border: 2px solid green;
+    background-color: white;
+    border: 2px solid black;
     border-radius: 50px;
+    width: 5%;
     padding: 20px;
-    font-size: 30px; */
+    height: 40;
+    font-size: 30px;
+    cursor: move;
+    z-index: 2;
 }
 .hold-circle-original{
     border: 2px solid black;
 }
 
 .hold-rectangle{
-    border: 2px solid green;
+    background-color: white;
+    border: 2px solid black;
+    width: 40;
+    height: 40;
+
+    padding: 20px;
+    font-size: 30px; 
+    z-index: 2;
+    cursor: move;
 }
 .hold-rectangle-original{
     border: 2px solid black;
 }
 .hold-diamond{
-    /* border: 2px solid green;
-    transform: rotate(45deg); */
     background-color: white;
-    border: 2px solid green;
-    margin-left: 16px;
+    border: 2px solid black;
+    width: 30;
     padding: 17px;
-    font-size: 20px;
+    height: 20;
+    z-index: 2;
     transform: rotate(45deg);
+    cursor: move;
 }
 .hold-diamond-original{
     border: 2px solid black;
+}
+
+.dropped_barrier_bold{
+    background-color: black;
+    width: 20%;
+    height: 10px;
+    z-index: 2;
+    cursor: move;
+}
+
+.dropped_barrier_hollow{
+    background-color: white;
+    border: 2px solid black;
+    width: 20%;
+    height: 25px;
+    cursor: move;
+    z-index: 2;
+}
+
+.dropped_barrier_label{
+    background-color: white;
+    border: 1.5px solid rgb(160, 156, 156);
+    width: 20%;
+    height: 30px;
+    cursor: move;
+    z-index: 2;
+}
+
+.dropped_barrier_label, span{
+    font-size: 0.9rem;
+    color: rgb(82, 80, 80);
+    text-align: center;
+    padding-top: 3px;
 }
