--- a/index.css
+++ b/index.css
@@ -64,6 +64,7 @@
     height: 80vh;
     width: 100%;
     overflow-x: auto;
+    overflow-y: auto;
 
 }
 /* --------------------------Draw area------------------- */
