--- a/index.css
+++ b/index.css
@@ -65,20 +65,29 @@
     width: 100%;
     overflow-x: auto;
     overflow-y: auto;
+    margin:0;
+    padding: 0;
 
 }
 /* --------------------------Draw area------------------- */
-
+.tables-main{
+    margin: 0;
+    padding: 0;
+    
+}
 .table-row{
     background-color: rgb(253, 254, 255);
     width: 100%;
     height: 70vh;
+    margin-left: 40%;
+    padding: 0;
     
 }
 
 .table-shapes{
     display: flex;
-    justify-content: space-between;
+    /* justify-content: space-between; */
+    flex-wrap: wrap;
 }
 
 .circle{
@@ -90,6 +99,8 @@
     height: 40;
     font-size: 30px;
     cursor: move;
+    /* margin-left: 20px; */
+    margin-right: 10px;
     z-index: 2;
 }
 
@@ -98,7 +109,7 @@
     border: 2px solid black;
     width: 40;
     height: 40;
-
+    margin-right: 10px;
     padding: 20px;
     font-size: 30px; 
     z-index: 2;
@@ -112,8 +123,10 @@
     padding: 17px;
     height: 20;
     z-index: 2;
+    margin-left: 10px;
     transform: rotate(45deg);
     cursor: move;
+    margin-right: 20px;
 }
 
 .barrier-bold{
@@ -223,3 +236,62 @@
     text-align: center;
     padding-top: 3px;
 }
+
+@media only screen and (max-width: 980px) {
+    .circle{
+        margin-bottom: 30px;
+    }
+    .rectangle{
+        margin-bottom: 30px;
+    }
+    .diamond{
+        margin-bottom: 30px;
+    }
+  }
+  
+
+  @media only screen and (max-width: 850px) {
+
+    .table-row{
+        display: flex;
+        height: 30vh;
+    }
+    .circle{
+        background-color: white;
+        border: 2px solid black;
+        border-radius: 50px;
+        width: 40;
+        padding: 20px;
+        height: 40;
+        font-size: 30px;
+        cursor: move;
+        /* margin-left: 20px; */
+        margin-right: 10px;
+        z-index: 2;
+       
+    }
+    .rectangle{
+        background-color: white;
+        border: 2px solid black;
+        width: 40;
+        height: 40;
+        margin-right: 10px;
+        padding: 20px;
+        font-size: 30px; 
+        z-index: 2;
+        cursor: move;
+    }
+    .diamond{
+        background-color: white;
+        border: 2px solid black;
+        width: 30;
+        padding: 17px;
+        height: 20;
+        z-index: 2;
+        margin-left: 10px;
+        transform: rotate(45deg);
+        cursor: move;
+        margin-right: 20px;
+    }
+  }
+  
