--- a/index.css
+++ b/index.css
@@ -1,291 +1,370 @@
 *{
     margin: 0;
     padding: 0;
-    
 }
 
-.service{
-    border: 1px solid white;
-    background-color: white;
-    border-radius: 5px;
 
-    padding: 7px;
+.tables-navbar {
+	background-color: whitesmoke;
+}
+.tables-navbar-ul {
+	padding: 10px;
+}
+.tables-navbar-ul li {
+	display: inline;
+}
+.tables-home{
+	float: left;
+	margin-right: 5px;
+}
+.tables-servicearea{
+	float: left;
+	margin-right: 5px;
+}
+/* .right {
+	float: right;
+} */
 
-    font-size: 1.0rem;
+.tables-publish {
+	/* float: right; */
+	margin-left: 580px;
 }
 
-.publish{
-    /* border: 1px solid white; */
-    background-color: whitesmoke;
-    border-radius: 5px;
-    padding: 7px;
-    /* padding-right: 5px; */
-    font-size: 1.0rem;
-    color: rgb(151, 138, 138);
+.tables-addServiceArea {
+	text-align: center;
 }
-
-.save{
-    font-size: 12px;
+.save {
+	
+	float: right;
+	border-radius: 5px;
+	border: none;
+	margin-left:3px ;
 }
-.save-text{
-    font-weight: bolder;
-    font-size: 13px;
-    color: whitesmoke;
+.save-text {
+	font-weight: bolder;
+	font-size: 13px;
+	/* color: whitesmoke; */
+	
 }
 
 /* To Be REMOVED */
-.draw-container{
-    display: flex;
-    /* width: 100%; */
-    /* z-index: -1; */
-    /* height: 70vh; */
-  
+.draw-container {
+	display: flex;
+	/* width: 100%; */
+	/* z-index: -1; */
+	/* height: 70vh; */
 }
 
-.draw-box{
-    /* background-color: rgb(212, 209, 209); */
-    width: 5%;
-    /* background-color: green; */
-    height: 5vh;
-    margin: 2px;
-    padding: 20px;
-    /* z-index: 0; */
-
+.draw-box {
+	/* background-color: rgb(212, 209, 209); */
+	width: 5%;
+	/* background-color: green; */
+	height: 5vh;
+	margin: 2px;
+	padding: 20px;
+	/* z-index: 0; */
 }
 
-.draw-area{
-    background-color: rgb(212, 209, 209);
-    height: 80vh;
-    width: 100%;
-    /* overflow-x: auto; */
-    /* overflow-y: auto; */
-    margin:0;
-    padding: 0;
-
+.draw-area {
+	background-color: rgb(212, 209, 209);
+	height: 80vh;
+	width: 100%;
+	right: 0;
+	/* overflow-x: auto; */
+	/* overflow-y: auto; */
+	margin: 0;
+	padding: 0;
 }
 /* --------------------------Draw area------------------- */
-.tables-main{
-    margin: 0;
-    padding: 0;
-    
+.tables-main {
+	margin: 0;
+	padding: 0;
+	align-items: center;
 }
-.table-row{
-    background-color: rgb(253, 254, 255);
-    width: 100%;
-    height: 70vh;
-    margin-left: 40%;
-    padding: 0;
-    
+.tables {
+	background-color: rgb(253, 254, 255);
+	width: 100%;
+	margin-left: 20px;
+	margin-right: 0px;
 }
 
-.table-shapes{
-    display: flex;
-    /* justify-content: space-between; */
-    flex-wrap: wrap;
+
+.table-shapes {
+	display: flex;
+	/* justify-content: space-between; */
+	flex-wrap: wrap;
 }
 
-.circle{
-    background-color: white;
-    border: 2px solid black;
-    border-radius: 50px;
-    width: 40;
-    padding: 20px;
-    height: 40;
-    font-size: 30px;
-    cursor: move;
-    
-    margin-right: 10px;
-    z-index: 2;
+.circle {
+	background-color: white;
+	border: 2px solid black;
+	border-radius: 50px;
+	width: 40;
+	padding: 20px;
+	height: 40;
+	font-size: 30px;
+	cursor: move;
+
+	margin-right: 10px;
+	z-index: 2;
 }
 
-.rectangle{
-    background-color: white;
-    border: 2px solid black;
-    width: 40;
-    height: 40;
-    margin-right: 10px;
-    padding: 20px;
-    font-size: 30px; 
-    z-index: 2;
-    cursor: move;
+.rectangle {
+	background-color: white;
+	border: 2px solid black;
+	width: 40;
+	height: 40;
+	margin-right: 10px;
+	padding: 20px;
+	font-size: 30px;
+	z-index: 2;
+	cursor: move;
 }
 
-.diamond{
-    background-color: white;
-    border: 2px solid black;
-    width: 30;
-    padding: 17px;
-    height: 20;
-    z-index: 2;
-    margin-left: 10px;
-    transform: rotate(45deg);
-    cursor: move;
-    margin-right: 20px;
+.diamond {
+	background-color: white;
+	border: 2px solid black;
+	width: 30;
+	padding: 17px;
+	height: 20;
+	z-index: 2;
+	margin-left: 10px;
+	transform: rotate(45deg);
+	cursor: move;
+	margin-right: 20px;
 }
 
-.barrier-bold{
-    background-color: black;
-    width: 70%;
-    height: 15px;
-    z-index: 2;
-    cursor: move;
+.barrier-shape div {
+	margin-top: 10px;
 }
 
-.barrier-hollow{
-    background-color: white;
-    border: 2px solid black;
-    width: 70%;
-    height: 30px;
-    cursor: move;
-    z-index: 2;
+.barrier-bold {
+	background-color: black;
+	width: 70%;
+	height: 15px;
+	z-index: 2;
+	cursor: move;
 }
 
-.barrier-label{
-    background-color: white;
-    border: 1.5px solid rgb(160, 156, 156);
-    width: 60%;
-    height: 30px;
-    cursor: move;
-    z-index: 2;
-}
-.barrier-label,span{
-    font-size: 0.9rem;
-    color: rgb(82, 80, 80);
-    text-align: center;
-    padding-top: 5px;
+.barrier-hollow {
+	background-color: white;
+	border: 2px solid black;
+	width: 70%;
+	height: 30px;
+	cursor: move;
+	z-index: 2;
 }
 
-.hold-circle{
-    background-color: white;
-    border: 2px solid black;
-    border-radius: 50px;
-    width: 5%;
-    padding: 20px;
-    height: 40;
-    font-size: 30px;
-    cursor: move;
-    z-index: 2;
+.barrier_label {
+	background-color: white;
+	border: 1.5px solid rgb(160, 156, 156);
+	width: 60%;
+	height: 30px;
+	cursor: move;
+	z-index: 2;
 }
-.hold-circle-original{
-    border: 2px solid black;
-}
-
-.hold-rectangle{
-    background-color: white;
-    border: 2px solid black;
-    width: 40;
-    height: 40;
-
-    padding: 20px;
-    font-size: 30px; 
-    z-index: 2;
-    cursor: move;
-}
-.hold-rectangle-original{
-    border: 2px solid black;
-}
-.hold-diamond{
-    background-color: white;
-    border: 2px solid black;
-    width: 30;
-    padding: 17px;
-    height: 20;
-    z-index: 2;
-    transform: rotate(45deg);
-    cursor: move;
-}
-.hold-diamond-original{
-    border: 2px solid black;
+.barrier_label span {
+	/* font-size: 0.9rem; */
+	color: rgb(82, 80, 80);
+	text-align: center;
+	padding-top: 5px;
 }
 
-.dropped_barrier_bold{
-    background-color: black;
-    width: 20%;
-    height: 10px;
-    z-index: 2;
-    cursor: move;
+.hold-circle {
+	background-color: white;
+	border: 2px solid black;
+	border-radius: 50px;
+	width: 5%;
+	padding: 20px;
+	height: 5%;
+	font-size: 30px;
+	cursor: move;
+	z-index: 2;
+}
+.hold-circle-original {
+	border: 2px solid black;
 }
 
-.dropped_barrier_hollow{
-    background-color: white;
-    border: 2px solid black;
-    width: 20%;
-    height: 25px;
-    cursor: move;
-    z-index: 2;
+.hold-rectangle {
+	background-color: white;
+	border: 2px solid black;
+	width: 40;
+	height: 40;
+
+	padding: 20px;
+	font-size: 30px;
+	z-index: 2;
+	cursor: move;
+}
+.hold-rectangle-original {
+	border: 2px solid black;
+}
+.hold-diamond {
+	background-color: white;
+	border: 2px solid black;
+	width: 30;
+	padding: 17px;
+	height: 20;
+	z-index: 2;
+	transform: rotate(45deg);
+	cursor: move;
+	line-height: 30px;
+}
+.hold-diamond-original {
+	border: 2px solid black;
 }
 
-.dropped_barrier_label{
-    background-color: white;
-    border: 1.5px solid rgb(160, 156, 156);
-    width: 20%;
-    height: 30px;
-    cursor: move;
-    z-index: 2;
+.dropped_barrier_bold {
+	background-color: black;
+	width: 20%;
+	height: 10px;
+	z-index: 2;
+	cursor: move;
 }
 
-.dropped_barrier_label, span{
-    font-size: 0.9rem;
-    color: rgb(82, 80, 80);
-    text-align: center;
-    padding-top: 3px;
+.dropped_barrier_hollow {
+	background-color: white;
+	border: 2px solid black;
+	width: 20%;
+	height: 25px;
+	cursor: move;
+	z-index: 2;
 }
+
+.dropped_label {
+	background-color: white;
+	border: 1.5px solid rgb(160, 156, 156);
+	width: 20%;
+	height: 30px;
+	cursor: move;
+	z-index: 2;
+	border: 2px dotted black;
+}
+
+.dropped_label span {
+	/* font-size: 0.9rem; */
+	color: rgb(82, 80, 80);
+	text-align: center;
+	padding-top: 3px;
+}
+
+/* -----Item Index which appears in the middle of a selected item */
+.itemIndex {
+	padding: 0;
+	margin: 0;
+	font-weight: bolder;
+	position: absolute;
+	margin-top: -13px;
+	margin-left: -5px;
+	/* font-style: italic; */
+	font-size: 1.2rem;
+}
+
+.itemDiamondIndex {
+	padding: 0;
+	margin: 0;
+	font-weight: bolder;
+	position: absolute;
+	margin-top: -13px;
+	margin-left: -5px;
+	/* font-style: italic; */
+	font-size: 1.2rem;
+	transform: rotate(-45deg);
+}
+
+/* --------------Resizing the selected elements----- */
+.resize {
+	display: flex;
+	margin-left: 25%;
+	margin-top: 10px;
+}
+.control {
+	margin-left: 0.3rem;
+}
+.control,
+span {
+	font-weight: bolder;
+}
+.button {
+	white-space: nowrap;
+	border: none;
+	padding: 0 10px;
+	color: #2583e3;
+	opacity: 1;
+	border-radius: 10%;
+}
+.button:hover,
+button:active {
+	color: #08529b;
+	border: 1px solid #08529b;
+}
+
+.ui-selected{
+	border: 2px solid rgb(190, 18, 18);
+	cursor: pointer;
+}
+.ui-selected > span{
+	border: none;
+}
+.ui-selecting{
+	background-color: rgb(226, 210, 210);
+}
+/* ---------------------Media Queries ----------------------- */
 
 @media only screen and (max-width: 980px) {
-    .circle{
-        margin-bottom: 30px;
-    }
-    .rectangle{
-        margin-bottom: 30px;
-    }
-    .diamond{
-        margin-bottom: 30px;
-    }
-  }
-  
+	.circle {
+		margin-bottom: 30px;
+	}
+	.rectangle {
+		margin-bottom: 30px;
+	}
+	.diamond {
+		margin-bottom: 30px;
+	}
+}
 
-  @media only screen and (max-width: 850px) {
-
-    .table-row{
-        display: flex;
-        height: 30vh;
-    }
-    .circle{
-        background-color: white;
-        border: 2px solid black;
-        border-radius: 50px;
-        width: 40;
-        padding: 20px;
-        height: 40;
-        font-size: 30px;
-        cursor: move;
-        /* margin-left: 20px; */
-        margin-right: 10px;
-        z-index: 2;
-       
-    }
-    .rectangle{
-        background-color: white;
-        border: 2px solid black;
-        width: 40;
-        height: 40;
-        margin-right: 10px;
-        padding: 20px;
-        font-size: 30px; 
-        z-index: 2;
-        cursor: move;
-    }
-    .diamond{
-        background-color: white;
-        border: 2px solid black;
-        width: 30;
-        padding: 17px;
-        height: 20;
-        z-index: 2;
-        margin-left: 10px;
-        transform: rotate(45deg);
-        cursor: move;
-        margin-right: 20px;
-    }
-  }
-  
+@media only screen and (max-width: 850px) {
+	.table-row {
+		display: flex;
+		height: 30vh;
+	}
+	.circle {
+		background-color: white;
+		border: 2px solid black;
+		border-radius: 50px;
+		width: 40;
+		padding: 20px;
+		height: 40;
+		font-size: 30px;
+		cursor: move;
+		margin-right: 10px;
+		z-index: 2;
+	}
+	.rectangle {
+		background-color: white;
+		border: 2px solid black;
+		width: 40;
+		height: 40;
+		margin-right: 10px;
+		padding: 20px;
+		font-size: 30px;
+		z-index: 2;
+		cursor: move;
+	}
+	.diamond {
+		background-color: white;
+		border: 2px solid black;
+		width: 30;
+		padding: 17px;
+		height: 20;
+		z-index: 2;
+		margin-left: 10px;
+		transform: rotate(45deg);
+		cursor: move;
+		margin-right: 20px;
+	}
+	/* --------------Resizing the selected elements----- */
+	.resize {
+		margin-left: 0;
+	}
+}
